[package]
name = "attorand"
version = "1.0.0"
edition = "2021"
authors = [
    "Isaac Clayton (slightknack) <slightknack@gmail.com>",
]
description = "A small random number generator hacked on top of Rust's standard library."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vrtbl/passerine"
